hphp/test/quick/require_overflow.php.expectf

Fatal error: Stack overflow in %s/test/quick/require_overflow.php on line 2
